--- a/.github/workflows/build-and-push-docker-hub.yml
+++ b/.github/workflows/build-and-push-docker-hub.yml
@@ -30,7 +30,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: thanh2k4/ci-cd:staging2
+          tags: lamdb/ci-cd:staging2
 
 
   pull-and-up:
